--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
 
 <p>Godzillacraft, Pointaview</p>
-
+<h3>I want to know more</h3>
+<p>You can know more at lafsalot.wikia.com</p>
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Who owns this website? / Who can I contact?</h3>
 
