--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <p>Even though this website is still under construction you can still find helpful tips to make the best of your wise Lafsalonian Faith.</p>
 
 <h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>What is this</h3>
+<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>What is this?</h3>
 
 <p>This is the home of the Lafsalonian Faith</p>
 
